fix spacing issue

--- a/amani/themes/peace/css/style.css
+++ b/amani/themes/peace/css/style.css
@@ -1510,8 +1510,7 @@ a.button:not(.launcher):not(.remove):not(.edit) {
       margin-right: 0; }
     .page-partners #block-system-main .views-row.views-row-last {
       border-bottom: 0;
-      margin-bottom: 0;
-      padding-bottom: 0; }
+      margin-bottom: 0; }
     .page-partners #block-system-main .views-row .views-field-title {
       font-family: "bariol_regularregular";
       text-transform: uppercase;
