--- a/amani/themes/peace/sass/_nodes.sass
+++ b/amani/themes/peace/sass/_nodes.sass
@@ -71,7 +71,6 @@
       &.views-row-last
         border-bottom: 0
         margin-bottom: 0
-        padding-bottom: 0
       .views-field-title
         font-family: "bariol_regularregular"
         text-transform: uppercase
